apps/cyberchef/bluey/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: cyberchef
  namespace: cyberchef
spec:
  ingressClassName: nginx
  rules:
    - host: cyberchef.babyvelociraptor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cyberchef
                port:
                  name: web
